--- a/gb/21/7/20/n13102853.md
+++ b/gb/21/7/20/n13102853.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/twoixt305/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/twoixt305/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/twoixt305/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/twoixt305/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/twoixt305/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/twoixt305/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/twoixt305/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【时事纵横】河南爆炸染红天 郑州地铁洪水惊魂</h2>
-
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【时事纵横】河南大劫 爆炸震四里 地铁成水牢</h2>
+<a href="https://dqgl8k1bfvgsc.cloudfront.net/F9jMsLZaq"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年07月21日讯】大家好，欢迎收看《<ahref="https://github.com/twoixt305/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》，我是扶摇。今天是2021年7月20日，星期二。</p>
-<p>今天关注的焦点：河南登封大爆炸染红天，震裂4里外房屋；河南遭极端强降雨袭击，巩义<ahref="https://github.com/twoixt305/djy/blob/master/gb/tag/%E5%B1%B1%E6%B4%AA%E6%9A%B4%E5%8F%91.md#1">山洪暴发</a>；<ahref="https://github.com/twoixt305/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>没过胸口，郑州地铁5号线惊魂；一座抗争的城市——德法电视台播香港运动纪录片。</p>
-<p>&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;</p>
+	<p>【大纪元2021年07月21日讯】大家好，欢迎收看《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》，我是扶摇。今天是2021年7月20日，星期二。</p>
+<p>今天关注的焦点：河南登封大爆炸染红天，震裂4里外房屋；河南遭极端强降雨袭击，巩义<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B1%B1%E6%B4%AA%E6%9A%B4%E5%8F%91.md#1">山洪暴发</a>；<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>没过胸口，郑州地铁5号线惊魂；一座抗争的城市——德法电视台播香港运动纪录片。</p>
+<p><center><a src=""></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/F9jMsLZaq"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/449f9760-e302-4da6-a625-aaaf8fb7ef96?r=16x9&amp;d=731" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>河南登封大爆炸染红天 震裂四里外房屋</h2>
 <p>7月20日，中国河南省灾情四起。</p>
 <p>当天早晨6点左右，在郑州市下辖的登封市，不少居民被一声声巨响惊醒，发现自家的房屋都在震动。</p>
@@ -17,8 +17,8 @@
 <p>据中共河南省登封市政府官网通报，发生爆炸的是当地“登电集团铝合金有限公司”。事发清晨4点左右，该公司临近的颍河水位暴涨并超警戒水位，因河道水位暴涨致围墙倒塌，厂区进水，内部人员已撤离，暂无人员伤亡。</p>
 <p>目前该厂全系停产，涉及运行产能四万余吨。</p>
 <p>那么，爆炸是由什么引发的呢？</p>
-<p>通报称，因为<ahref="https://github.com/twoixt305/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>漫延到厂区内，合金槽内高温溶液发生了爆炸。</p>
-<h2>河南遭极端强降雨袭击 巩义<ahref="https://github.com/twoixt305/djy/blob/master/gb/tag/%E5%B1%B1%E6%B4%AA%E6%9A%B4%E5%8F%91.md#1">山洪暴发</a></h2>
+<p>通报称，因为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B4%AA%E6%B0%B4.md#1">洪水</a>漫延到厂区内，合金槽内高温溶液发生了爆炸。</p>
+<h2>河南遭极端强降雨袭击 巩义<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B1%B1%E6%B4%AA%E6%9A%B4%E5%8F%91.md#1">山洪暴发</a></h2>
 <p>郑州这次的洪水，不但导致大爆炸，还造成其它严重灾害，传出的一幕幕险情，震惊中外。</p>
 <p>连日来，河南全省遭遇大范围极端强降雨袭击。据河南省气象服务中心的数据，截止20日上午11点，连续3日的监测显示，郑州市下辖的嵩山、巩义、新密和登封，以及洛阳市下辖的偃师，这5个国家级气象站，都突破建站以来连续3日降水量的历史极值。</p>
 <p>排名第五的登封，3日降水量达到288.3毫米，远超此前233.1毫米的纪录。而排名第一的嵩山，降水量高达512.2毫米，几乎追平正常时期，全年降水量的下限值。</p>
@@ -61,48 +61,48 @@
 <p>但是，电影并不是用革命的豪情作为基调。里面出现的抗争者，都是有血有肉的个体，像是情侣手牵手逛商场；年轻人孩子气地花一千元港币买手办模型；穿一身黑衣站在街头，却不忘先打完一局手机游戏。</p>
 <p>德国之声说，大家从这些抗争者身上感受到的，更多的是个人的生活和思考，以及他们的困惑、伤痛和无奈。比如，被捕后所须承担的保释金和律师费，抗争所引发的家庭成员之间的矛盾，都是抗争者需要面对的真实问题。在这个时候，读法律还有用吗？香港这个家是走是留？这些问题无法在影片中找到答案，但却提醒着我们，这场运动并没有完结，故事还在继续。</p>
 <p>好的，我们今天就先说到这里，下期节目，我们不见不散。</p>
-<p>《<ahref="https://github.com/twoixt305/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%B6%E4%BA%8B%E7%BA%B5%E6%A8%AA.md#1">时事纵横</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/twoixt305/djy/blob/master/gb/21/7/13/n13087052.md#1">【时事纵横】党媒煽举报风 北京遭国际多重反击</a></li>
-<li><a href="https://github.com/twoixt305/djy/blob/master/gb/21/7/14/n13089293.md#1">【时事纵横】习语泄内部危机？美印太布大局</a></li>
-<li><a href="https://github.com/twoixt305/djy/blob/master/gb/21/7/15/n13092035.md#1">【时事纵横】李克强拍桌喊抓人 美军机闪电访台</a></li>
-<li><a href="https://github.com/twoixt305/djy/blob/master/gb/21/7/19/n13100143.md#1">【时事纵横】FBI通缉中共黑客 陆电瓶车炸成火球</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/13/n13087052.md#1">【时事纵横】党媒煽举报风 北京遭国际多重反击</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/14/n13089293.md#1">【时事纵横】习语泄内部危机？美印太布大局</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/15/n13092035.md#1">【时事纵横】李克强拍桌喊抓人 美军机闪电访台</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/19/n13100143.md#1">【时事纵横】FBI通缉中共黑客 陆电瓶车炸成火球</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/twoixt305/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/23/n2974481.md#1" target="_blank">鲜为人知的马克思之四：好斗的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/12/n11446723.md#1" target="_blank">曹长青：美国成为唯一超强的秘密</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/7/n13073680.md#1">【命理】年过50无子 命师算出他40岁早得一子</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/8/n13077166.md#1">【忠义传】断桥救主 喝退曹军的张飞</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/15/n13091924.md#1">【未解之谜】文革横死 转生却不为复仇</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/15/n13090127.md#1">法男心灵感应与预知能力 震撼《美国达人秀》</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/6/28/n13054240.md#1">【水浒传奇】神人传武功 奇女琼英梦中学艺</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/19/n13100116.md#1">【新闻看点】美军机再飞台湾 中共4黑客被祭旗</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/20/n13102622.md#1">【古韵流芳】 王之涣笔下风光 诗歌成就名楼</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/19/n13100156.md#1">【秦鹏直播】菲“爱国”网红露馅 粉红患癌悔悟</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/15/n13089640.md#1">在Costco买这8种东西 很快赚回会员费</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/11/n13082414.md#1">沈舟：中共空军训练继续露馅</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/17/n13096080.md#1">大陆超市“钱大妈”加盟商曝血亏内幕</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/18/n13097589.md#1">黄晓明发文晒外婆家内景 家中细节引热议</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/18/n13097793.md#1">台占星师唐绮阳打疫苗 13小时后出现副作用</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/19/n13099664.md#1">吴亦凡陷桃色纠纷 反击大陆网红索讨巨款</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/18/n13097378.md#1">港片《天下乌鸦》 夺戛纳电影节短片金棕榈奖</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/19/n13099205.md#1">夏宇童打疫苗残剂 以为无症状半夜突高烧呕吐</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/17/n13095928.md#1">浴室厕所不想有湿气、霉菌？专家教你清洁法</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/13/n13085833.md#1">打第2剂疫苗担心心肌炎？施打后注意2件事</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/19/n13099742.md#1">“记忆3宝”泡茶喝 增强记忆力、击退大脑健忘</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/18/n13096604.md#1">野雁受伤在医院动手术 伴侣找上门深情凝望</a></li>
-<li><a href="https://github.com/smhdla347/djy/blob/master/gb/21/7/18/n13096682.md#1">以1美元把发廊卖给员工 暖心老板：她值得</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/twoixt305/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/twoixt305/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/20/n13102853.htm">【时事纵横】河南爆炸染红天 郑州地铁洪水惊魂</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/20/n13102853.htm">【时事纵横】河南大劫 爆炸震四里 地铁成水牢</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/twoixt305/djy/blob/master/gb/21/7/20/n13102853.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/twoixt305/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/twoixt305/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/twoixt305/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/twoixt305/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twoixt305/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/20/n13102853.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
